fix: wrap fixes

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -121,8 +121,9 @@ body {
   line-height: 19px;
 }
 .button__text {
-  font-weight: 400;
-  padding-left: 20px;
+  font-weight: 600;
+  padding-left: 18px;
+  white-space: nowrap;
 }
 
 .nowrap {
